# controle-pgm

./: .dockerignore  .gitignore  AzuriteConfig  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  package-lock.json  package.json
.github/agents/: copilot-instructions.md
.github/workflows/: backend.yml  frontend.yml  infra.yml
.specify/memory/: constitution.md
backend/: .funcignore  AzuriteConfig  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  __init__.py  function_app.py  host.json  local.settings.json.template  pyproject.toml  requirements-dev.txt  requirements.txt
backend/core/: __init__.py  auth.py  config.py  exceptions.py  middleware.py  rate_limit.py  security.py  tables.py
backend/functions/: __init__.py
backend/functions/auth/: __init__.py  change_password.py  login.py  logout.py  me.py
backend/functions/document_types/: __init__.py  create.py  delete.py  get.py  list.py  update.py
backend/functions/history/: __init__.py  export.py  list.py
backend/functions/numbers/: __init__.py  generate.py
backend/functions/users/: __init__.py  create.py  delete.py  get.py  list.py  reset_password.py  update.py
backend/models/: __init__.py  document_type.py  number_log.py  sequence.py  user.py
backend/services/: __init__.py  audit_service.py  document_type_service.py  history_service.py  number_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/unit/: test_auth.py
frontend/: .prettierignore  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/public/: staticwebapp.config.json
frontend/src/: App.tsx
frontend/src/components/auth/: ChangePasswordDialog.tsx  ProtectedRoute.tsx  index.ts
frontend/src/components/features/: DocumentTypesList.tsx  HistoryTable.tsx  NumberGenerator.tsx  UsersList.tsx  index.ts
frontend/src/components/layout/: Header.tsx  PageContainer.tsx  Sidebar.tsx  index.ts
frontend/src/components/ui/: button.test.tsx
frontend/src/lib/: api.ts  auth-context.test.tsx  auth-context.tsx  utils.test.ts  utils.ts
frontend/src/pages/: DocumentTypesPage.tsx  HistoryPage.tsx  HomePage.tsx  LoginPage.tsx  UsersPage.tsx  index.ts
frontend/src/test/: setup.ts  test-utils.tsx
frontend/src/types/: index.ts
infra/: README.md  dev.bicepparam  main.bicep  main.json  prod.bicepparam
infra/modules/: function-app.bicep  keyvault.bicep  monitoring.bicep  storage.bicep
scripts/: seed.py
specs/001-controle-numeracao/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-controle-numeracao/checklists/: requirements.md
specs/001-controle-numeracao/contracts/: openapi.yaml
specs/002-fix-delete-validation/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-delete-validation/checklists/: hard_delete_validation.md  requirements.md  validation.md
